<resources>
    <string name="app_name">App Name</string>

    <!-- Sign In, Sign Up, Forgot Password -->
    <string name="signIn">Sign In</string>
    <string name="pwd">Password</string>
    <string name="email">E-mail</string>
    <string name="sampleEmail">*****@****.***</string>
    <string name="noAccnt">Don\'t have an account?</string>
    <string name="haveAccnt">Already have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="agreeToTerms">I agree to the terms and conditions</string>
    <string name="resetHeading">Reset your Password</string>
    <string name="resetMsg">Enter your email and we\'ll send a link to reset your password.</string>
    <string name="resetPwd">Reset Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Horizontal Scroll Menu -->
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="balanceSheet">Balance Sheet</string>
    <string name="netEarningsSummary">Net Earnings Summary</string>
    <string name="netWorthSummary">Net Worth Summary</string>
    <string name="verifyMsg">Verify your email address</string>
    <string name="resendEmail">Resend Email</string>
    <string name="verificationMsg">We\'ve sent a verification email to your inbox. \n Click on the confirmation link to continue. </string>
    <string name="emailNotSent">Didn\'t get an email?</string>

    <!--Split expenses (Ayeshka)-->
    <string name="TotalAmount">Total Amount</string>
    <string name="NoOfMembers">No Of Members</string>
    <string name="PerMember">Per member</string>
    <string name="Split">Split</string>

    <!-- Add to transaction (Ayeshka)-->
    <string name="amount">Rs.</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="Schedule">Schedule</string>
    <string name="Notes">Notes</string>

    <!-- Categories pop-up (Ayeshka)-->
    <string name="Categories">Categories</string>

    <!-- login (Ayeshka)-->
    <string name="loginToAcc">Login to your Account</string>

    <!-- registration (Ayeshka)-->
    <string name="createAcc">Create your Account</string>

    <!-- sms list (Ayeshka)-->
    <string name="Name">Name</string>
    <string name="Contact">Contact</string>

    <!-- smart receipt capture (Ayeshka)-->
    <string name="CaptureImage">Capture Image</string>
    <string name="DetectText">Detect Text</string>

    <!-- text recognition (Ayeshka)-->
    <string name="PickImage">Pick Image</string>

    <!-- Add to update sms list (Ayeshka)-->
    <string name="Heading">Heading</string>
    <string name="Institute">Name of the Financial Institution</string>
    <string name="finInstName">finInstName</string>
    <string name="ContactNoName">Contact Number / Name</string>
    <string name="UpdateSMSListName">Name</string>
    <string name="UpdateBTN">Update</string>
    <string name="CancelBTN">Cancel</string>

    <!-- Add to view sms list (Ayeshka)-->
    <string name="ViewHeading">Heading</string>
    <string name="DeleteBTN">Delete</string>

    <!-- Frag payables and receivables (Ayeshka)-->
    <string name="Payables">Payables</string>
    <string name="Total">Total</string>

    <!-- Frag sms integration (Ayeshka)-->
    <string name="AddBTN">Add</string>
    <string name="ViewAllBTN">View All</string>


    <!-- net earning (Ayeshka)-->
    <string name="NetCategory">Category</string>
    <string name="NetAmount">Amount</string>

    <!-- Frag net worth (Ayeshka)-->
    <string name="DateRange">Date Range</string>

    <!-- payables and receivables list(Ayeshka)-->
    <string name="PersonName">Person Name</string>
    <string name="PAmount">Amount</string>
    <string name="ScheduledDate">Scheduled Date</string>
    <string name="Pnotes">Notes</string>

    <!-- transaction list(Ayeshka)-->
    <string name="TCategory">Category</string>
    <string name="TAmount">Amount</string>
    <string name="subcategory">Sub-Category</string>
    <string name="accBalance">Account | Balance</string>

    <!-- settings activity -->
    <string name="Localization">Localization</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="DateFormat">Date Format</string>
    <string name="TimeFormat">Time Format</string>
    <string name="General">General</string>
    <string name="Appearance">Appearance</string>
    <string name="localBackups">Local Backups</string>
    <string name="onlineSync">Online Sync</string>
    <string name="security">Security</string>
    <string name="helpnsSupport">Help and Support</string>
    <string name="aboutUs">About Us</string>


    <!-- User Profile activity -->
    <string name="Change_email">Email</string>
    <string name="Change_Password">Change Password</string>
    <string name="mobile">Mobile</string>
    <string name="bank_detail">Bank Details</string>
    <string name="card_details">Card Details</string>
    <string name="transaction_reports">Transaction Reports</string>
    <string name="google">Google Account</string>
    <string name="facebook">FaceBook Account</string>

    <string name="news">Check News</string>
</resources>