<LinearLayout
    android:id="@+id/fragment_news_rootview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainDashboardFragment"
    android:orientation="vertical"
    android:background="#ffffff">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:id="@+id/transactions"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/transactions" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:id="@+id/balanceSheet"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/balanceSheet" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:id="@+id/netEarningsSummary"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/netEarningsSummary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:id="@+id/netWorthSummary"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/netWorthSummary" />

        </LinearLayout>

    </HorizontalScrollView>

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.financemanagementapp.MainDashboardFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>